<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_sms">发送短信</string>
    <string name="send_email">发送至邮箱</string>
    
    <string name="language">语言(Language)</string>
    <string-array name="languages">
        <item>English</item>
        <item>中文</item>
    </string-array>
    
    <string name="city">City</string>
    <string-array name="cities">
        <item>Shanghai</item>
        <item>Beijing</item>
    </string-array>
    
    <string name="weather">
        Sunny\nTemperature: 0 ~ 15 ℃\nWind: 3 kmph N\nHumidity: 22%\nVisibility: 3 km</string>
        
    <string name="maps">Maps</string>
    <string name="coupons">Coupons</string>
    <string name="ads">Advertisements</string>
    <string name="games">Games</string>
    
    <string name="airport_name">Shanghai Hongqiao International Airport</string>
    <string name="go_back">Return</string>
    
    <string-array name="suroundings">
        <item>bus info</item>
        <item>bus info</item>
        <item>bus info</item>
        <item>bus info</item>
    </string-array>
    
    <string-array name="stores">
        <item>KFC</item>
        <item>McDonald\'s</item>
        <item>Yoshinoya</item>
    </string-array>
    
    <string-array name="coupons">
        <item>1 dollar suite</item>
        <item>2 dollars suite</item>
        <item>3 dollars suite</item>
    </string-array>
    
    <string name="qr_code_description">Please use you phone\'s QR code scanner to get the download address of this coupon</string>
    <string name="contact_info_label">Cell Phone No. / E-mail Address:</string>
</resources>