<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CouponDetailActivity" >

    <TextView
        android:id="@+id/coupon_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qr" />
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="30px"
            android:textColor="@android:color/white"
            android:text="@string/qr_code_description" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:text="@string/contact_info_label" />
    <EditText
        android:id="@+id/contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right" >

        <Button
            android:id="@+id/button_send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_sms" />

        <Button
            android:id="@+id/button_send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button_coupon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="50px"
            android:layout_marginRight="50px"
            android:background="#AA3A5F8B"
            android:padding="30px"
            android:text="@string/go_back" />
    </RelativeLayout>

</LinearLayout>